<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentoNotaDetalle">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/titulo_detalle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/titulo_nota_detalle"
                android:background="@color/aguaClaro"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/descripcion_detalle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descripcion_detalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titulo_detalle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:maxHeight="70dp"
                android:text="@string/descripcion_nota_detalle"
                android:shadowColor="@color/agua"
                android:shadowRadius="25"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/contenido_detalle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo_detalle" />

            <TextView
                android:id="@+id/contenido_detalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/descripcion_detalle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="start|top"
                android:scrollbars="vertical"
                android:text="@string/contenido_nota_detalle"
                android:shadowColor="@color/agua"
                android:shadowRadius="5"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcion_detalle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contenido_detalle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>