<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentoTareaDetalle">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/completada_detalle_tarea"
                android:layout_width="296dp"
                android:layout_height="49dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="4dp"
                android:background="@color/moradoClaro"
                android:gravity="center"
                android:text="@string/completada_tarea_detalle"
                android:textAlignment="gravity"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/titulo_detalle_tarea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/ckbxCompletada"
                android:layout_width="121dp"
                android:layout_height="47dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:background="@color/moradoClaro"
                android:enabled="true"
                android:text=""
                android:buttonTint="@color/morado"
                app:layout_constraintBottom_toBottomOf="@+id/completada_detalle_tarea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/completada_detalle_tarea"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/titulo_detalle_tarea"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/completada_detalle_tarea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/titulo_tarea_detalle"
                android:shadowColor="@color/morado"
                android:shadowRadius="25"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/descripcion_detalle_tarea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.461"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/completada_detalle_tarea" />

            <TextView
                android:id="@+id/descripcion_detalle_tarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titulo_detalle_tarea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/descripcion_tarea_detalle"
                android:shadowColor="@color/morado"
                android:shadowRadius="15"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/btn_calendario_tarea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.457"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo_detalle_tarea" />

            <TextView
                android:id="@+id/fecha_detalle_tarea"
                android:layout_width="209dp"
                android:layout_height="26dp"
                android:layout_below="@+id/descripcion_detalle_tarea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="4dp"
                android:ellipsize="start"
                android:ems="10"
                android:enabled="false"
                android:inputType="text"
                android:maxHeight="50pt"
                android:text="@string/fecha_hora_tarea_detalle"
                android:shadowColor="@color/morado"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@+id/recordatorios_detalle_tarea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.277"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcion_detalle_tarea" />

            <Button
                android:id="@+id/btn_calendario_tarea"
                android:layout_width="45dp"
                android:layout_height="43dp"
                android:layout_below="@+id/descripcion_detalle_tarea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/fecha_detalle_tarea"
                android:background="@drawable/ic_baseline_calendar_today_24"
                android:text=""
                app:layout_constraintBottom_toBottomOf="@+id/fecha_detalle_tarea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fecha_detalle_tarea"
                app:layout_constraintTop_toTopOf="@+id/fecha_detalle_tarea" />

            <Spinner
                android:id="@+id/recordatorios_detalle_tarea"
                android:layout_width="209dp"
                android:layout_height="50dp"
                android:layout_below="@+id/fecha_detalle_tarea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/hint_recordatorios_tarea_detalle"
                android:background="@color/moradoClaro"
                android:inputType="text"
                android:maxHeight="50pt"
                app:layout_constraintBottom_toTopOf="@+id/contenido_detalle_tarea"
                app:layout_constraintEnd_toEndOf="@+id/fecha_detalle_tarea"
                app:layout_constraintStart_toStartOf="@+id/fecha_detalle_tarea"
                app:layout_constraintTop_toBottomOf="@+id/fecha_detalle_tarea" />

            <Button
                android:id="@+id/btn_recordatorio_tarea"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_below="@+id/btn_calendario_tarea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/fecha_detalle_tarea"
                android:background="@drawable/ic_baseline_notifications_24"
                android:text=""
                app:layout_constraintBottom_toBottomOf="@+id/recordatorios_detalle_tarea"
                app:layout_constraintEnd_toEndOf="@+id/btn_calendario_tarea"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/recordatorios_detalle_tarea"
                app:layout_constraintTop_toTopOf="@+id/recordatorios_detalle_tarea" />

            <TextView
                android:id="@+id/contenido_detalle_tarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recordatorios_detalle_tarea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxHeight="600dp"
                android:scrollbars="vertical"
                android:text="@string/contenido_tarea_detalle"
                android:shadowColor="@color/morado"
                android:shadowRadius="3"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recordatorios_detalle_tarea" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contenido_detalle_tarea" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>