<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentoCrearTarea">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/titulo_crear_tarea"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_titulo_crear_tarea"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/descripcion_crear_tarea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/descripcion_crear_tarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titulo_crear_tarea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:gravity="start|center"
                android:hint="@string/hint_descripcion_crear_tarea"
                android:inputType="textMultiLine"
                android:maxHeight="50pt"
                android:maxLength="250"
                app:layout_constraintBottom_toTopOf="@+id/fecha_crear_tarea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo_crear_tarea" />

            <TextView
                android:id="@+id/fecha_crear_tarea"
                android:layout_width="205dp"
                android:layout_height="39dp"
                android:layout_below="@+id/descripcion_crear_tarea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="4dp"
                android:ellipsize="start"
                android:ems="10"
                android:enabled="false"
                android:inputType="text"
                android:maxHeight="50pt"
                android:text="@string/hint_fecha_hora_crear_tarea"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@+id/recordatorios_crear_tarea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.286"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcion_crear_tarea" />

            <Button
                android:id="@+id/btn_calendario_tarea"
                android:layout_width="53dp"
                android:layout_height="43dp"
                android:layout_below="@+id/descripcion_crear_tarea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/fecha_crear_tarea"
                android:background="@drawable/ic_baseline_calendar_today_24"
                android:text=""
                app:layout_constraintBottom_toBottomOf="@+id/fecha_crear_tarea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.223"
                app:layout_constraintStart_toEndOf="@+id/fecha_crear_tarea"
                app:layout_constraintTop_toTopOf="@+id/fecha_crear_tarea" />

            <Spinner
                android:id="@+id/recordatorios_crear_tarea"
                android:layout_width="205dp"
                android:layout_height="39dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/hint_recordatorios_crear_tarea"
                android:inputType="text"
                android:maxHeight="50pt"
                app:layout_constraintBottom_toTopOf="@+id/eliminar_notificación"
                app:layout_constraintEnd_toEndOf="@+id/fecha_crear_tarea"
                app:layout_constraintStart_toStartOf="@+id/fecha_crear_tarea"
                app:layout_constraintTop_toBottomOf="@+id/fecha_crear_tarea" />

            <Button
                android:id="@+id/btn_recordatorio_tarea"
                android:layout_width="52dp"
                android:layout_height="45dp"
                android:layout_below="@+id/btn_calendario_tarea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/fecha_crear_tarea"
                android:background="@drawable/ic_baseline_notifications_24"
                android:text=""
                app:layout_constraintBottom_toBottomOf="@+id/recordatorios_crear_tarea"
                app:layout_constraintEnd_toEndOf="@+id/btn_calendario_tarea"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/recordatorios_crear_tarea"
                app:layout_constraintTop_toTopOf="@+id/recordatorios_crear_tarea" />

            <EditText
                android:id="@+id/contenido_crear_tarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recordatorios_crear_tarea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_contenido_crear_tarea"
                android:inputType="textMultiLine"
                android:maxHeight="600dp"
                app:layout_constraintBottom_toTopOf="@id/multimedia_tarea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recordatorios_crear_tarea"
                />

            <TextView
                android:id="@+id/eliminar_notificación"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eliminar_crear_tarea"
                app:layout_constraintBottom_toTopOf="@+id/contenido_crear_tarea"
                app:layout_constraintEnd_toEndOf="@+id/recordatorios_crear_tarea"
                app:layout_constraintStart_toStartOf="@+id/recordatorios_crear_tarea"
                app:layout_constraintTop_toBottomOf="@+id/recordatorios_crear_tarea"
                android:background="@color/purple_500"
                android:textColor="@color/white"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/multimedia_tarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contenido_crear_tarea"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_audio_tarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_btn_speak_now"
        app:fabSize="mini"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_video_tareas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/presence_video_online"
        app:fabSize="mini"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_imagen_tareas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera"
        app:fabSize="mini"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_crear_tarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_attach_file_24" />

</androidx.constraintlayout.widget.ConstraintLayout>